--- a/example.bib
+++ b/example.bib
@@ -400,7 +400,7 @@ abstract = {Recently, surface-sensitive spectroscopy data and molecular dynamics
 }
 @article{WeiX2002,
   title = {{Sum-frequency spectroscopic studies of ice interfaces}},
-  author = {Wei, Xing and Miranda, Paulo B. and Zhang, Chun and Shen, Y. R.},
+  author = {Wei, X. and Miranda, P. B. and Zhang, C. and Shen, Y. R.},
   journal = {Phys. Rev. B},
   volume = {66},
   issue = {8},
@@ -419,7 +419,7 @@ abstract = {Recently, surface-sensitive spectroscopy data and molecular dynamics
     to accelerate somewhat and that of hydrogen-bond structural relaxation, which occurs at a longer time scale,
     is found to slow down with increasing ion concentration for both NaCl and KCl solutions.}},
   title = {{Effects of ion atmosphere on hydrogen-bond dynamics in aqueous electrolyte solutions}},
-  author = {Chandra, Amalendu},
+  author = {Chandra, A.},
   journal = {Phys. Rev. Lett.},
   volume = {85},
   pages = {768-771},
@@ -918,7 +918,7 @@ URL = {https://doi.org/10.1063/1.465203}
 @article{SB02,
   abstract = {{The dynamics of hydrogen bonds among water molecules themselves and with the polar head groups (PHG) at a micellar surface have been investigated by long molecular dynamics simulations. The lifetime of the hydrogen bond between a PHG and a water molecule is found to be much longer than that between any two water molecules, and is likely to be a general feature of hydrophilic surfaces of organized assemblies. Analyses of individual water trajectories suggest that water molecules can remain bound to the micellar surface for more than 100 ps. The activation energy for such a transition from the bound to a free state for the water molecules is estimated to be about 3.5 kcal/mol.}},
   title = {{Hydrogen-bond dynamics near a micellar surface: Origin of the universal slow relaxation at complex aqueous interfaces}},
-  author = {Balasubramanian, Sundaram and Pal, Subrata and Bagchi, Biman},
+  author = {Balasubramanian, S. and Pal, S. and Bagchi, B.},
   journal = {Phys. Rev. Lett.},
   volume = {89},
   pages = {115505},
@@ -927,7 +927,7 @@ URL = {https://doi.org/10.1063/1.465203}
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.89.115505}
 }
 @article{Luzar1993,
-author = {Luzar,Alenka  and Chandler,David },
+author = {Luzar,A.  and Chandler,D.},
 title = {Structure and hydrogen bond dynamics of water-dimethyl sulfoxide mixtures by computer simulations},
 journal = {J. Chem. Phys.},
 volume = {98},
@@ -1257,15 +1257,6 @@ URL = {https://doi.org/10.1063/1.464521},
     year = {2000},
     publisher = {Academic Press: San Diego,CA}
 }
-@ARTICLE{DiTucci2018,
-  author = {Matthew J. DiTucci and Christiane N. Stachl and Evan R. Williams},
-  title = {Long Distance Ion-Water Interactions in Aqueous Sulfate Nanodrops Persist to Ambient Temperatures in the Upper Atmosphere},
-  journal = {Chem. Sci.},
-  year = {2018},
-  volume = {9},
-  pages = {3970-3977},
-  doi={10.1039/C8SC00854J},
-}
 @ARTICLE{Gopalakrishnan2005,
     author = {S. Gopalakrishnan and  P. Jungwirth and D. Tobias and H. Allen},
     title = {{Air-liquid interfaces of aqueous solutions containing ammonium and sulfate: Spectroscopic and molecular dynamics studies}},
@@ -1553,7 +1544,7 @@ URL = {https://doi.org/10.1063/1.464521},
     pages = {115123}
 }
 @article{Pulay1969,
-    author = {Pulay, P},
+    author = {Pulay, P.},
     title = {{Ab initio calculation of force constants and equilibrium geometries in polyatomic molecules: I. Theory}},
     journal = {Mol. Phys.},
     volume = {17},
@@ -2377,7 +2368,7 @@ volume = "128",
 pages = "15136--15144",
 year = "2006",
 doi = "10.1021/ja0613207",
-author = "Philip E. Mason and George W. Neilson and Christopher E. Dempsey  and John W. Brady ",
+author = "P. E. Mason and G. W. Neilson and C. E. Dempsey  and J. W. Brady ",
 abstract = " Neutron diffraction with isotopic substitution (NDIS) experiments and molecular dynamics (MD) simulations have been used to study the structuring in aqueous solution of two cesium salts, cesium carbonate, and cesium nitrate. As was previously found for guanidinium salts of carbonate, mesoscopic-scale clusters were seen to form in the Cs2CO3 solution both in the MD simulations and in the diffraction experiments. No such large scale ion clusters were found in the CsNO3 solutions in either the modeling or experiments. The results are dominated by the strength and geometry of the direct first-neighbor interactions, which explain the differences in the clustering behavior between the two solutions without need to refer to longer-range water−water structuring.",
 }
 @ARTICLE{Wahab2005,
@@ -4003,7 +3994,7 @@ pages = {084504}
     journal={J. Phys. Chem. C},
     year="2014",
     volume="118",
-    pages={24941-24949},
+    pages={24941--24949},
     doi = {10.1021/jp505770t},
     url = {https://pubs.acs.org/doi/abs/10.1021/jp505770t}
 } 
@@ -4361,14 +4352,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
    In this thesis, we consider the vibrational modes of water molecules in (1600, 3800) cm$^{-1}$.
    The time step is 0.5 fs.}}
   }
-@ARTICLE{WeiX02,
-    author = {X. Wei and P. B. Miranda and C. Zhang and Y. R. Shen},
-    title = {{Sum-frequency spectroscopic studies of ice interfaces}},
-    journal = {Phys. Rev. B.},
-    year = {2002},
-    volume = {66},
-    pages = {085401}
-}
 @ARTICLE{Bankura2014,
     author = {A. Bankura and A. Karmakar and V. Carnevale and A. Chandra and M. L. Klein},
     title = {{Structure, Dynamics, and Spectral Diffusion of Water from First-Principles Molecular Dynamics}},
@@ -4681,15 +4664,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     doi = {10.1146/annurev-physchem-032511-143811},
     url = {https://doi.org/10.1146/annurev-physchem-032511-143811},
     pages = {107--130}
-}
-@ARTICLE{DiTucci2018,
-  author = {Matthew J. DiTucci and Christiane N. Stachl and Evan R. Williams},
-  title = {Long Distance Ion-Water Interactions in Aqueous Sulfate Nanodrops Persist to Ambient Temperatures in the Upper Atmosphere},
-  journal = {Chem. Sci.},
-  year = {2018},
-  volume = {9},
-  pages = {3970-3977},
-  doi={10.1039/C8SC00854J},
 }
 @ARTICLE{Tobias2008,
     author = {D. Tobias and J. C. Hemminger},
@@ -5172,8 +5146,8 @@ volume = "128",
 pages = "15136--15144",
 year = "2006",
 doi = "10.1021/ja0613207",
-author = "Philip E. Mason and George W. Neilson and Christopher E. Dempsey  and John W. Brady ",
-abstract = " Neutron diffraction with isotopic substitution (NDIS) experiments and molecular dynamics (MD) simulations have been used to study the structuring in aqueous solution of two cesium salts, cesium carbonate, and cesium nitrate. As was previously found for guanidinium salts of carbonate, mesoscopic-scale clusters were seen to form in the Cs2CO3 solution both in the MD simulations and in the diffraction experiments. No such large scale ion clusters were found in the CsNO3 solutions in either the modeling or experiments. The results are dominated by the strength and geometry of the direct first-neighbor interactions, which explain the differences in the clustering behavior between the two solutions without need to refer to longer-range water−water structuring.",
+author = "P. E. Mason and G. W. Neilson and C. E. Dempsey  and J. W. Brady ",
+abstract = "Neutron diffraction with isotopic substitution (NDIS) experiments and molecular dynamics (MD) simulations have been used to study the structuring in aqueous solution of two cesium salts, cesium carbonate, and cesium nitrate. As was previously found for guanidinium salts of carbonate, mesoscopic-scale clusters were seen to form in the Cs2CO3 solution both in the MD simulations and in the diffraction experiments. No such large scale ion clusters were found in the CsNO3 solutions in either the modeling or experiments. The results are dominated by the strength and geometry of the direct first-neighbor interactions, which explain the differences in the clustering behavior between the two solutions without need to refer to longer-range water−water structuring.",
 }
 @ARTICLE{Wahab05,
 title = {{Ultrasonic Velocities, Densities, Viscosities, Electrical Conductivities, Raman Spectra, and Molecular Dynamics Simulations of Aqueous Solutions of Mg(OAc)$_2$ and Mg(NO$_3$)$_2$: Hofmeister Effects and Ion Pair Formation}},
@@ -6205,14 +6179,6 @@ year = {2017},
 volume = {146},
 pages = {084504}
 }
-@Article{HuaWei2014,
-author={W. Hua and D. Verreault and H. C. Allen},
-title={{Surface electric fields of aqueous solutions of NH$_4$NO$_3$, Mg(NO$_3$)$_2$, NaNO$_3$, and LiNO$_3$: implications of atmospheric aerosol chemistry}},
-journal={J. Phys. Chem. C},
-year="2014",
-volume="118",
-pages={24941-24949}
-} 
 @Article{Johnson2014,
 author={C. M. Johnson and S. Baldelli},
 title={{Vibrational sum frequency spectroscopy studies of the influence of solutes and phospholipids at vapor/water interfaces relevant to biological and environmental systems}},
@@ -6354,7 +6320,7 @@ doi={10.1098/rsif.2013.0518},
 url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3869154/}
 }
 @article{Banerjee2016,
-author = {Banerjee, Puja  and Yashonath, Subramanian and Bagchi, Biman },
+author = {Banerjee, P.  and Yashonath, S. and Bagchi, B.},
 title = {Coupled jump rotational dynamics in aqueous nitrate solutions},
 journal = {J. Chem. Phys.},
 volume = {145},
@@ -6367,7 +6333,7 @@ URL = {https://aip.scitation.org/doi/abs/10.1063/1.4971864}
 @article{Fournier2016,
 abstract={Weakly coordinating ions only affect water molecules in the first
 hydration shell; },
-author = {Joseph A. Fournier and William Carpenter and Luigi De Marco and Andrei Tokmakoff},
+author = {J. A. Fournier and W. Carpenter and L. De Marco and A. Tokmakoff},
 title = {Interplay of ion-water and water-water interactions within the hydration shells of nitrate and carbonate directly probed with 2D IR spectroscopy},
 journal = {J. Am. Chem. Soc.},
 volume = {138},
@@ -6511,14 +6477,6 @@ pages={033404},
 abstract={},
 doi={10.1103/PhysRevB.75.033404},
 }
-@Article{HuaWei2014,
-author={Wei Hua and Dominique Verreault and Heather C. Allen},
-title={Surface electric fields of aqueous solutions of \ch{NH4NO3}, \ch{Mg(NO3)2}, \ch{NaNO3}, and \ch{LiNO3}: Implications of atmospheric aerosol chemistry},
-journal={J. Phys. Chem. C},
-year="2014",
-volume="118",
-pages="24941-24949",
-} 
 @ARTICLE{Baldelli1997,
 author = "Steve Baldelli and Cheryl Schnitzer and Mary Jane Shultz",
 title = "{Sum frequency generation investigation of water at the surface of \ch{H2O}/\ch{H2SO4} binary systems}",
@@ -6608,8 +6566,8 @@ doi = {},
 journal = {Curr. Opin. Coll. Interface Sci.} 
 }
 @ARTICLE{DiTucci2018,
-  author = {Matthew J. DiTucci and Christiane N. Stachl and Evan R. Williams},
-  title = {Long Distance Ion-Water Interactions in Aqueous Sulfate Nanodrops Persist to Ambient Temperatures in the Upper Atmosphere},
+  author = {M. J. DiTucci and C. N. Stachl and E. R. Williams},
+  title = {Long distance ion-water interactions in aqueous sulfate nanodrops persist to ambient temperatures in the upper atmosphere},
   journal = {Chem. Sci.},
   year = {2018},
   volume = {9},
@@ -7353,7 +7311,7 @@ pages = {105--108}
 }
 @article{Matthias13,
   title = {Spatial dependence of protein-water collective hydrogen-bond dynamics},
-  author = {Heyden, Matthias and Tobias, Douglas J.},
+  author = {Heyden, M. and Tobias, D. J.},
   journal = {Phys. Rev. Lett.},
   volume = {111},
   issue = {21},
@@ -7365,7 +7323,7 @@ pages = {105--108}
 }
 @article{Kolano06,
 abstract = {X-ray crystallography and nuclear magnetic resonance measurements provide us with atomically resolved structures of an ever-growing number of biomolecules. These static structural snapshots are important to our understanding of biomolecular function, but real biomolecules are dynamic entities that often exploit conformational changes and transient molecular interactions to perform their tasks. Nuclear magnetic resonance methods can follow such structural changes, but only on millisecond timescales under non-equilibrium conditions. Time-resolved X-ray crystallography has recently been used to monitor the photodissociation of CO from myoglobin on a subnanosecond timescale, yet remains challenging to apply more widely. In contrast, two-dimensional infrared spectroscopy, which maps vibrational coupling between molecular groups and hence their relative positions and orientations, is now routinely used to study equilibrium processes on picosecond timescales. Here we show that the extension of this method into the non-equilibrium regime allows us to observe in real time in a short peptide the weakening of an intramolecular hydrogen bond and concomitant opening of a $\beta$-turn. We find that the rate of this process is two orders of magnitude faster than the 'folding speed limit' established for contact formation between protein side chains. {\textcopyright}2006 Nature Publishing Group.},
-author = {Kolano, Christoph and Helbing, Jan and Kozinski, Mariusz and Sander, Wolfram and Hamm, Peter},
+author = {Kolano, C. and Helbing, J. and Kozinski, M. and Sander, W. and Hamm, P.},
 doi = {10.1038/nature05352},
 url = {https://www.nature.com/articles/nature05352},
 issn = {14764687},
@@ -7448,7 +7406,7 @@ pages = {474},
 abstract= {{ }}
 }
 @ARTICLE{dosSantos10,
-author = {dosSantos, Alexandre P and Diehl, Alexandre and Levin, Yan},
+author = {dosSantos, A. P. and Diehl, A. and Levin, Y.},
 title = {{Surface tensions, surface potentials, and the Hofmeister series of electrolyte solutions}},
 journal = {Langmuir},
 year = {2010},
@@ -7648,7 +7606,7 @@ url={https://doi.org/10.1119/1.13029},
 abstract= {{ }}
 }
 @ARTICLE{HuaWei2013,
-author = {Hua, Wei and Verreault, Dominique and Allen, Heather C.},
+author = {Hua, W. and Verreault, D. and Allen, H. C.},
 title = {{Surface prevalence of perchlorate anions at the air/aqueous interface}},
 journal = {J. Phys. Chem. Lett.},
 year = {2013},
@@ -8117,7 +8075,7 @@ url = {https://doi.org/10.1002/wcms.90}
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.066401}
 }
 @article{Mallik2008,
-author = {Mallik,Bhabani S.  and Semparithi,A.  and Chandra,Amalendu },
+author = {Mallik,B. S.  and Semparithi, A.  and Chandra,A.},
 title = {A first principles theoretical study of vibrational spectral diffusion and hydrogen bond dynamics in aqueous ionic solutions: D$_2$O in hydration shells of Cl$^-$ ions},
 journal = {J. Chem. Phys.},
 volume = {129},
