--- a/main.tex
+++ b/main.tex
@@ -699,6 +699,7 @@ $\nu$ & vibrational frequency, or  vibrational quantum number& \\
 
 %---
 %CV
+%Locatin:  https://www.overleaf.com/project/61ce80a73f346c3552e3b2b5
 %---
 \includepdf[pages=1]{chapters/chap_cv/cv_ganghuang.pdf}
 \includepdf[pages=2]{chapters/chap_cv/cv_ganghuang.pdf}
