--- a/main.tex
+++ b/main.tex
@@ -448,7 +448,6 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 
 %
 I thank Prof. Luo Honggang, Prof. Fang Haiping and Prof. Zhou Haijun for their great help in my study during my doctoral studies. 
-The cooperation and discussions with Dr. Shi Guosheng, Dr. Shao Junming, Dr. Zhou Bo and Dr. Wang Chunlei have benefited me a lot. 
 
 %
 I thank Prof. Jin Yuliang for his support, trust and teachings over the past two years.
@@ -697,18 +696,21 @@ $\nu$ & vibrational frequency, or  vibrational quantum number& \\
 %
 %%\include{chapters/chap_hkt/chap_hkt}
 
-%---
-%CV
-%Locatin:  https://www.overleaf.com/project/61ce80a73f346c3552e3b2b5
-%---
-\includepdf[pages=1]{chapters/chap_cv/cv_ganghuang.pdf}
-\includepdf[pages=2]{chapters/chap_cv/cv_ganghuang.pdf}
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 
 \printbibliography[heading=bibintoc]
 
+%---
+%CV
+%Locatin:  https://www.overleaf.com/project/61ce80a73f346c3552e3b2b5
+%---
+% If all pages are needed, use
+\includepdf[pages=-]{chapters/chap_cv/cv_ganghuang.pdf}
+%------------------------------
+% If only one page is needed, use
+%\includepdf[pages=2]{chapters/chap_cv/cv_ganghuang.pdf}
 %----------------------------------------------------------------------------------------
 \end{document}  
 
