--- a/main.tex
+++ b/main.tex
@@ -247,6 +247,9 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 \begin{titlepage}
 \begin{center}
 
+\begin{flushright} \large
+\includegraphics[scale=0.5]{./diagrams/uni-mainz_logo}
+\end{flushright}
 \vspace*{.06\textheight}
 {\scshape\LARGE \univname\par}\vspace{1.5cm} % University name
 \textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
